--- a/individual-work/wba-projekt-2/styles/_footer.scss
+++ b/individual-work/wba-projekt-2/styles/_footer.scss
@@ -1,9 +1,5 @@
-main {
-    margin-inline: 8em;
-}
-
 .footer-main {
-    z-index: 800;
+    /* z-index: 800; */
     margin-inline: max(2vw, 20vw);
     margin-top: 10em;
     padding: 1em;
@@ -21,6 +17,35 @@ main {
                     color: $footer-color;
                     text-decoration: underline;
                     font-size: clamp(.8vw, 1em);
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 414px) and (max-height: 736px)
+/* mobile iPhone 8 plus */
+
+{
+    .footer-main {
+        margin-inline: 12vw;
+        margin-top: 5em;
+        padding: .5em;
+        border-top: 2px solid $footer-color;
+        .footer-text-container {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            &:nth-child(1) {
+                p {
+                    color: $footer-color;
+                    margin-top: .1em;
+                    font-size: clamp(.8vw, 1em);
+                    span {
+                        color: $footer-color;
+                        text-decoration: underline;
+                        font-size: clamp(.8vw, 1em);
+                    }
                 }
             }
         }
