--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -1,112 +1,166 @@
-                    /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
- */
-                    
-                    @media (min-width: 1920px) and (min-height: 1080px) {
-                        header {
-                            height: 8vh;
-                            margin-bottom: 2vh;
-                            margin-inline: 8em;
-                            nav {
-                                /* position: fixed;
+@media (min-width: 1920px) and (min-height: 1080px) {
+    header {
+        height: 8vh;
+        margin-bottom: 2vh;
+        margin-inline: 8em;
+        nav {
+            /* position: fixed;
             z-index: 999; */
-                                .navbar-main {
-                                    display: flex;
-                                    justify-content: space-between;
-                                    align-items: center;
-                                    border-bottom: 1px solid black;
-                                    .logo {
-                                        img {
-                                            height: 50px;
-                                            margin: 10px;
-                                        }
-                                        #respon-img-mini {
-                                            display: none;
-                                        }
-                                    }
-                                    .button {
-                                        /*  display: flex;
+            .navbar-main {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                border-bottom: 1px solid black;
+                .logo {
+                    img {
+                        height: 50px;
+                        margin: 10px;
+                    }
+                    #respon-img-mini {
+                        display: none;
+                    }
+                }
+                .button {
+                    /*  display: flex;
                 justify-content: end; */
-                                        /* body {
+                    /* body {
                  min-height: 100vh;
                 background: linear-gradient(#7d6cfc, #c635ea);} */
-                                        /* background-color: red; */
-                                        .button-container li {
-                                            float: left;
-                                            list-style: none;
-                                            line-height: 20px;
-                                            width: 150px;
-                                            text-align: center;
-                                        }
-                                        .button-container li a {
-                                            text-decoration: none;
-                                            display: block;
-                                            font-size: 120%;
-                                            color: black;
-                                        }
-                                    }
-                                }
-                            }
-                        }
+                    /* background-color: red; */
+                    .button-container li {
+                        float: left;
+                        list-style: none;
+                        line-height: 20px;
+                        width: 150px;
+                        text-align: center;
                     }
-                    
-                    @media (max-width: 414px) and (max-height: 736px)
-                    /* mobile iPhone 8 plus */
-                    
-                    {
-                        header {
-                            height: 8vh;
-                            margin-bottom: 2vh;
-                            margin-inline: 1em;
-                            nav {
-                                .navbar-main {
-                                    display: flex;
-                                    justify-content: space-between;
-                                    align-items: center;
-                                    border-bottom: 1px solid black;
-                                    .logo {
-                                        img {
-                                            height: 50px;
-                                            margin: 10px;
-                                        }
-                                        #respon-img-big {
-                                            display: none;
-                                        }
-                                        #respon-img-mini {}
-                                    }
-                                    .button {
-                                        .button-container {
-                                            display: none;
-                                        }
-                                    }
-                                    .action {
-                                        /* position: fixed; */
-                                        bottom: 50px;
-                                        left: 50px;
-                                        width: 50px;
-                                        height: 50px;
-                                        background: #fff;
-                                        border-radius: 50%;
-                                        border: 2px solid rgb(0, 0, 0);
-                                        cursor: pointer;
-                                        /* box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); */
-                                    }
-                                    .action span {
-                                        /* position: relative; */
-                                        width: 100%;
-                                        height: 100%;
-                                        display: flex;
-                                        justify-content: center;
-                                        align-items: center;
-                                        font-size: 2em;
-                                        color: #000000;
-                                        transition: 0.3s ease-in-out;
-                                        font-family: "Poppins", sans-serif;
-                                    }
-                                }
-                            }
-                        }
+                    .button-container li a {
+                        text-decoration: none;
+                        display: block;
+                        font-size: 120%;
+                        color: black;
                     }
-                    /* @media (min-width: 1366) and (min-height: 768px) {}
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 414px) and (max-height: 736px)
+/* mobile iPhone 8 plus */
+
+{
+    header {
+        height: 8vh;
+        margin-bottom: 2vh;
+        margin-inline: 1em;
+        nav {
+            .navbar-main {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                border-bottom: 1px solid black;
+                .logo {
+                    img {
+                        height: 50px;
+                        margin: 10px;
+                    }
+                    #respon-img-big {
+                        display: none;
+                    }
+                }
+                .button {
+                    .button-container {
+                        /* display: none; */
+                    }
+                    .button-container li {
+                        float: left;
+                        list-style: none;
+                        line-height: 20px;
+                        width: 150px;
+                        text-align: center;
+                    }
+                    .button-container li a {
+                        text-decoration: none;
+                        display: block;
+                        font-size: 120%;
+                        color: black;
+                    }
+                    /* .action {
+                        position: fixed;
+                        bottom: 50px;
+                        left: 50px;
+                        width: 50px;
+                        height: 50px;
+                        background: #fff;
+                        border-radius: 50%;
+                        border: 2px solid rgb(0, 0, 0);
+                        cursor: pointer;
+                        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+                    }
+                    .action span {
+                        position: relative;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 2em;
+                        color: #000000;
+                        transition: 0.3s ease-in-out;
+                        font-family: "Poppins", sans-serif;
+                    }
+                    .action.active span {
+                        transform: rotate(135deg);
+                    }
+                    .action ul {
+                        position: absolute;
+                        bottom: 55px;
+                        background: #fff;
+                        min-width: 250px;
+                        padding: 20px;
+                        border-radius: 20px;
+                        opacity: 0;
+                        visibility: hidden;
+                        transition: 0.3s;
+                    }
+                    .action.active ul {
+                        bottom: 65px;
+                        opacity: 1;
+                        visibility: visible;
+                        transition: 0.3s;
+                    }
+                    .action ul li {
+                        list-style: none;
+                        text-decoration: none;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        padding: 7px 0;
+                    }
+                    .action ul li:hover {
+                        font-weight: 600;
+                    }
+                    .action ul li:not(:last-child) {
+                        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                    }
+                    .action ul li img {
+                        margin-right: 15px;
+                        opacity: 0.2;
+                        transform: scale(0.7);
+                    }
+                    .action ul li:hover img {
+                        opacity: 0.8;
+                        transform: scale(1);
+                    } */
+                }
+            }
+        }
+    }
+}
+
+
+/* @media (min-width: 1366) and (min-height: 768px) {}
                     
                     @media (min-width: 1440) and (min-height: 900px) {}
                     
@@ -120,4 +174,5 @@
                     
                     @media (min-width: 601px) and (min-height: 962px) {}
                     
-                    @media (min-width: 862px) and (min-height: 1536px) {} */
+                                /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+ */
