--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -251,12 +251,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
         display: flex;
         flex-direction: column;
         /* #helper {
-            display: grid;
-            .first-section-heading-container,
-            .first-section-image-container {
-                grid-column: 1;
-                grid-row: 1;
-            }
+            
         } */
         .first-section-heading-container {
             margin-top: 2em;
@@ -307,7 +302,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             padding: 1em;
             font-size: 1rem;
             transition-duration: .2s;
-            border-top: 3px solid black;
+            border-left: 3px solid black;
             /* font-size: clamp(1.6rem, 1.3rem, .7rem); */
         }
         h2:hover {
@@ -315,7 +310,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
         }
     }
     .second-section {
-        height: 100vh;
+        height: 100%;
         .second-section-content-organizer {
             height: 80%;
             display: flex;
@@ -323,21 +318,21 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             justify-content: center;
             .second-section-first-image-desc-container {
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 justify-content: center;
                 margin-top: 5em;
-                /* padding-right: 14em;
-                padding-bottom: 1em; */
+                /* margin-inline: 1em; */
                 .second-section-first-desc-container {
+                    padding-top: 1em;
+                    padding-inline: 1em;
                     p {
-                        width: 100%;
-                        max-width: 25em;
-                        height: 100%;
+                        width: fit-content;
+                        height: 100%
                     }
                     h4 {
-                        padding-bottom: .3em;
+                        margin-top: .4em;
+                        padding-bottom: .2em;
                         font-weight: bold;
-                        justify-self: flex-start;
                     }
                 }
                 img {
@@ -348,17 +343,20 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             }
             .second-section-second-image-desc-container {
                 display: flex;
-                flex-direction: row;
+                flex-direction: column-reverse;
                 justify-content: center;
                 margin-top: 5em;
+                /* margin-inline: 1em; */
                 .second-section-second-desc-container {
+                    padding-top: 1em;
+                    padding-inline: 1em;
                     p {
-                        width: 40vw;
-                        max-width: 25em;
+                        width: fit-content;
                         height: 100%;
                     }
                     h4 {
-                        padding-bottom: .3em;
+                        margin-top: .4em;
+                        padding-bottom: .2em;
                         font-weight: bold;
                     }
                 }
@@ -374,63 +372,58 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-inline: 4em;
+            margin-inline: 1em;
+            margin-top: 4em;
             h3 {
-                margin: 4em;
-                margin-inline: 6em;
+                margin: 1em;
+                margin-inline: 1.2em;
                 text-align: center;
-                font-size: 1.2rem;
+                font-size: 1rem;
+                padding: 1em;
             }
         }
         .second-section-paragraph-container {
             filter: opacity(100%);
             transition-duration: .2s;
-            box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
+            box-shadow: 0px 20px 20px 0px rgba(95, 95, 95, 0.329);
         }
     }
     .third-section {
-        margin-top: 10em;
+        margin-top: 5em;
         .third-section-image-container {
-            margin-inline: 10em;
             display: grid;
-            gap: 3em;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(2, 1fr);
-            img {}
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(4, 1fr);
             div {
                 display: flex;
                 align-items: center;
                 justify-content: center;
             }
-            .third-section-image-container:nth-child(1) {}
-            .third-section-image-container:nth-child(2) {}
-            .third-section-image-container:nth-child(3) {}
-            .third-section-image-container:nth-child(4) {}
         }
         .third-section-image-desc-container {
             width: 100%;
-            margin-top: 10em;
+            margin-top: 5em;
             display: flex;
             .third-section-image-desc-sub-container {
-                display: inline-flex;
-                justify-content: center;
+                display: flex;
+                align-items: center;
+                flex-direction: column-reverse;
                 .third-section-desc-container {
-                    align-self: center;
                     p,
                     h4 {
-                        max-width: 20vw;
-                        padding: 2em;
-                        padding-left: 3em;
-                        font-size: 130%;
+                        padding-inline: 2em;
+                        font-size: 90%;
                     }
                     h4 {
-                        padding-bottom: 0;
+                        padding-bottom: .4em;
                         font-weight: bold;
+                        font-size: 100%;
+                        text-align: center;
                     }
                 }
                 img {
-                    max-width: 30%;
-                    height: auto;
+                    margin-top: 1em;
+                    width: 70%;
                 }
             }
         }
