--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -208,38 +208,8 @@
                 padding: 1em;
                 font-family: customFontTwo;
                 font-weight: bolder;
-                font-size: 4rem;
+                font-size: 2.5rem;
                 border-left: 3px solid black;
-                box-shadow: -50px 0px 35px 0px #a9a9a947;
-            }
-            h1::after {
-                content: "";
-                width: 0px;
-                height: 0px;
-                position: absolute;
-                transition: 0.4s;
-            }
-            h1::before {
-                content: "";
-                width: 11px;
-                height: 11px;
-                position: absolute;
-                transition: 0.4s;
-            }
-            h1::after {
-                top: 0px;
-                left: 0px;
-                border-left: 3px solid black;
-            }
-            h1:hover::before {
-                width: 100%;
-                height: 100%;
-            }
-            h1:hover::after {
-                width: 100%;
-                height: 100%;
-            }
-            h1:hover {
                 box-shadow: -50px 0px 35px 0px #a9a9a947;
             }
         }
@@ -271,34 +241,33 @@
                 margin-top: 4em;
             }
             .box-1 {
-                margin: 2em;
-                padding: 3em;
-                width: 45vw;
-                align-self: flex-end;
-                margin-left: 5em;
+                /* margin: 2em; */
+                padding: 2em;
+                width: fit-content;
+                align-self: center;
+                /* margin-left: 5em; */
                 box-shadow: -20px 10px 20px 2px #8988882b;
             }
             .box-2 {
-                margin: 2em;
-                margin-bottom: 4em;
-                padding: 3em;
-                width: 45vw;
-                align-self: flex-start;
-                margin-right: 5em;
-                box-shadow: 0px 20px 20px 2px #76757528;
+                /* margin: 2em; */
+                padding: 2em;
+                width: fit-content;
+                align-self: center;
+                /* margin-left: 5em; */
+                box-shadow: -20px 10px 20px 2px #8988882b;
             }
             .box-3 {
-                margin: 2em;
-                padding: 3em;
-                width: 45vw;
+                /* margin: 2em; */
+                padding: 2em;
+                width: fit-content;
                 align-self: center;
-                margin-top: 2em;
-                box-shadow: 20px 10px 20px 2px #81818131;
+                /* margin-left: 5em; */
+                box-shadow: -20px 10px 20px 2px #8988882b;
             }
         }
     }
     .contact-section {
-        margin-top: 10em;
+        margin-top: 6em;
         width: 100%;
         height: 100%;
         display: flex;
