--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -276,7 +276,7 @@ select {
   margin-inline: 20vw;
   margin-top: 10em;
   padding: 1em;
-  border-top: 2px solid #857f7fd6;
+  border-top: 2px solid #857f7f85;
 }
 
 .footer-main .footer-text-container {
@@ -291,13 +291,13 @@ select {
 }
 
 .footer-main .footer-text-container:nth-child(1) p {
-  color: #857f7fd6;
+  color: #857f7f85;
   margin-top: .3em;
   font-size: clamp(0.8vw, 1em);
 }
 
 .footer-main .footer-text-container:nth-child(1) p span {
-  color: #857f7fd6;
+  color: #857f7f85;
   text-decoration: underline;
   font-size: clamp(0.8vw, 1em);
 }
@@ -307,7 +307,7 @@ select {
     margin-inline: 12vw;
     margin-top: 5em;
     padding: .5em;
-    border-top: 2px solid #857f7fd6;
+    border-top: 2px solid #857f7f85;
   }
   .footer-main .footer-text-container {
     display: -webkit-box;
@@ -320,12 +320,12 @@ select {
     text-align: center;
   }
   .footer-main .footer-text-container:nth-child(1) p {
-    color: #857f7fd6;
+    color: #857f7f85;
     margin-top: .1em;
     font-size: clamp(0.8vw, 1em);
   }
   .footer-main .footer-text-container:nth-child(1) p span {
-    color: #857f7fd6;
+    color: #857f7f85;
     text-decoration: underline;
     font-size: clamp(0.8vw, 1em);
   }
@@ -1201,41 +1201,8 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     padding: 1em;
     font-family: customFontTwo;
     font-weight: bolder;
-    font-size: 4rem;
+    font-size: 2.5rem;
     border-left: 3px solid black;
-    -webkit-box-shadow: -50px 0px 35px 0px #a9a9a947;
-            box-shadow: -50px 0px 35px 0px #a9a9a947;
-  }
-  .about-section .about-heading-container h1::after {
-    content: "";
-    width: 0px;
-    height: 0px;
-    position: absolute;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-  }
-  .about-section .about-heading-container h1::before {
-    content: "";
-    width: 11px;
-    height: 11px;
-    position: absolute;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-  }
-  .about-section .about-heading-container h1::after {
-    top: 0px;
-    left: 0px;
-    border-left: 3px solid black;
-  }
-  .about-section .about-heading-container h1:hover::before {
-    width: 100%;
-    height: 100%;
-  }
-  .about-section .about-heading-container h1:hover::after {
-    width: 100%;
-    height: 100%;
-  }
-  .about-section .about-heading-container h1:hover {
     -webkit-box-shadow: -50px 0px 35px 0px #a9a9a947;
             box-shadow: -50px 0px 35px 0px #a9a9a947;
   }
@@ -1273,39 +1240,46 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     margin-top: 4em;
   }
   .about-section .text-container .box-1 {
-    margin: 2em;
-    padding: 3em;
-    width: 45vw;
-    -ms-flex-item-align: end;
-        align-self: flex-end;
-    margin-left: 5em;
+    /* margin: 2em; */
+    padding: 2em;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    /* margin-left: 5em; */
     -webkit-box-shadow: -20px 10px 20px 2px #8988882b;
             box-shadow: -20px 10px 20px 2px #8988882b;
   }
   .about-section .text-container .box-2 {
-    margin: 2em;
-    margin-bottom: 4em;
-    padding: 3em;
-    width: 45vw;
-    -ms-flex-item-align: start;
-        align-self: flex-start;
-    margin-right: 5em;
-    -webkit-box-shadow: 0px 20px 20px 2px #76757528;
-            box-shadow: 0px 20px 20px 2px #76757528;
-  }
-  .about-section .text-container .box-3 {
-    margin: 2em;
-    padding: 3em;
-    width: 45vw;
+    /* margin: 2em; */
+    padding: 2em;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    margin-top: 2em;
-    -webkit-box-shadow: 20px 10px 20px 2px #81818131;
-            box-shadow: 20px 10px 20px 2px #81818131;
+    /* margin-left: 5em; */
+    -webkit-box-shadow: -20px 10px 20px 2px #8988882b;
+            box-shadow: -20px 10px 20px 2px #8988882b;
+  }
+  .about-section .text-container .box-3 {
+    /* margin: 2em; */
+    padding: 2em;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    /* margin-left: 5em; */
+    -webkit-box-shadow: -20px 10px 20px 2px #8988882b;
+            box-shadow: -20px 10px 20px 2px #8988882b;
   }
   .contact-section {
-    margin-top: 10em;
+    margin-top: 6em;
     width: 100%;
     height: 100%;
     display: -webkit-box;
