--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -1,50 +1,53 @@
-@media (min-width: 1920px) and (min-height: 1080px) {
-    header {
-        height: 8vh;
-        margin-bottom: 2vh;
-        margin-inline: 8em;
-        nav {
-            /* position: fixed;
+/* @media (min-width: 1920px) and (min-height: 1080px) { */
+
+header {
+    height: 8vh;
+    margin-bottom: 2vh;
+    margin-inline: 8em;
+    nav {
+        /* position: fixed;
             z-index: 999; */
-            .navbar-main {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                border-bottom: 1px solid black;
-                .logo {
-                    img {
-                        height: 50px;
-                        margin: 10px;
-                    }
-                    #respon-img-mini {
-                        display: none;
-                    }
+        .navbar-main {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid black;
+            .logo {
+                img {
+                    height: 50px;
+                    margin: 10px;
                 }
-                .button {
-                    /*  display: flex;
+                #respon-img-mini {
+                    display: none;
+                }
+            }
+            .button {
+                /*  display: flex;
                 justify-content: end; */
-                    /* body {
+                /* body {
                  min-height: 100vh;
                 background: linear-gradient(#7d6cfc, #c635ea);} */
-                    /* background-color: red; */
-                    .button-container li {
-                        float: left;
-                        list-style: none;
-                        line-height: 20px;
-                        width: 150px;
-                        text-align: center;
-                    }
-                    .button-container li a {
-                        text-decoration: none;
-                        display: block;
-                        font-size: 120%;
-                        color: black;
-                    }
+                /* background-color: red; */
+                .button-container li {
+                    float: left;
+                    list-style: none;
+                    line-height: 20px;
+                    width: 150px;
+                    text-align: center;
+                }
+                .button-container li a {
+                    text-decoration: none;
+                    display: block;
+                    font-size: 120%;
+                    color: black;
                 }
             }
         }
     }
 }
+
+
+/* } */
 
 @media (max-width: 414px) and (max-height: 736px)
 /* mobile iPhone 8 plus */
