--- a/individual-work/wba-projekt-2/styles/_var.scss
+++ b/individual-work/wba-projekt-2/styles/_var.scss
@@ -1,15 +1,15 @@
 @font-face {
-    src: url(Bhaijaan.ttf);
+    src: url(../fonts/Bhaijaan.ttf);
     font-family: customFontOne;
 }
 
 @font-face {
-    src: url(Amatic.ttf);
+    src: url(../fonts/Amatic.ttf);
     font-family: customFontTwo;
 }
 
 @font-face {
-    src: url(PHand.ttf);
+    src: url(../fonts/Paytone.ttf);
     font-family: customFontThree;
 }
 
