--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -95,7 +95,7 @@ main {
         .box-3 {
             margin: 2em;
             padding: 3em;
-            width: 45vw;
+            width: 50vw;
             align-self: center;
             margin-top: 2em;
             box-shadow: 20px 10px 20px 2px #81818131;
@@ -104,16 +104,18 @@ main {
                 /* margin: 20px; */
                 color: #202020;
                 text-transform: uppercase;
-                letter-spacing: -2px;
+                word-spacing: 5px;
             }
             h2 span {
                 /* display: block; */
                 margin: 11px 0 17px 0;
-                font-size: 80px;
-                line-height: 80px;
+                /* font-size: 80px; */
+                font-size: 2.5rem;
+                /*                 line-height: 80px;
+ */
                 color: #f1ebe5;
                 text-shadow: 0 13.36px 8.896px #c4b59d, 0 -2px 1px #fff;
-                letter-spacing: -4px;
+                word-spacing: 5px;
             }
         }
     }
