--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -1,22 +1,31 @@
-main {
-    margin-inline: 8em;
-}
-
-.about-section {
-    margin-top: 3em;
-    .about-heading-container {
-        @include first-heading-container;
-        text-align: start;
-        position: relative;
-        transition-duration: 0.4s;
-        h1 {
-            padding: 1em;
-            font-family: customFontTwo;
-            font-weight: bolder;
-            font-size: 4rem;
-            border-left: 3px solid black;
-            box-shadow: -50px 0px 35px 0px #a9a9a947;
-        }
+@media (max-width: 1920px) and (max-height: 1080px) {
+    #about {
+        margin-inline: 8em;
+    }
+    .about-section {
+        margin-top: 3em;
+        .about-heading-container {
+            /* @include first-heading-container; */
+            display: inline-flex;
+            text-align: start;
+            position: relative;
+            transition-duration: 0.4s;
+            margin-bottom: 4em;
+            h1 {
+                text-transform: uppercase;
+                padding: 1em;
+                font-family: customFontThree;
+                font-weight: bolder;
+                font-size: 4rem;
+                /* border-left: 3px solid black; */
+                /* box-shadow: -50px 0px 35px 0px #a9a9a947; */
+                margin: 11px 0 17px 0;
+                font-size: 3rem;
+                color: rgb(48, 48, 48);
+                text-shadow: 0 10px 10px #555555, 0 -2px 1px rgb(83, 83, 83);
+                word-spacing: 5px;
+            }
+            /* 
         h1::after {
             content: "";
             width: 0px;
@@ -46,171 +55,217 @@ main {
         }
         h1:hover {
             box-shadow: -50px 0px 35px 0px #a9a9a947;
+        } */
         }
-    }
-    .text-container {
-        display: flex;
-        flex-direction: column;
-        margin-top: 3em;
-        h2 {
-            text-align: center;
-            width: 100%;
-            font-family: customFontThree;
-            font-weight: bold;
-        }
-        p {
-            padding-top: 2em;
-        }
-        ul {
-            margin-top: .7em;
-            list-style-type: none;
-        }
-        ul>li {
-            text-indent: 5px;
-        }
-        ul>li:before {
-            content: "-";
-            text-indent: 5px;
-        }
-        [class^="box-"] {
-            margin-top: 4em;
-        }
-        .box-1 {
-            margin: 2em;
-            padding: 3em;
-            width: 45vw;
-            align-self: flex-end;
-            margin-left: 5em;
-            box-shadow: -20px 10px 20px 2px #8988882b;
-        }
-        .box-2 {
-            margin: 2em;
-            margin-bottom: 4em;
-            padding: 3em;
-            width: 45vw;
-            align-self: flex-start;
-            margin-right: 5em;
-            box-shadow: 0px 20px 20px 2px #76757528;
-        }
-        .box-3 {
-            margin: 2em;
-            padding: 3em;
-            width: 50vw;
-            align-self: center;
-            margin-top: 2em;
-            box-shadow: 20px 10px 20px 2px #81818131;
-            background-color: #ece5da;
+        .text-container {
+            display: flex;
+            flex-direction: column;
+            margin-top: 3em;
             h2 {
-                /* margin: 20px; */
+                text-align: center;
+                width: 100%;
+                font-family: customFontThree;
+                font-weight: bold;
+            }
+            p {
+                padding-top: 2em;
+            }
+            ul {
+                margin-top: .7em;
+                list-style-type: none;
+            }
+            ul>li {
+                text-indent: 5px;
+            }
+            ul>li:before {
+                content: "-";
+                text-indent: 5px;
+            }
+            [class^="box-"] {
+                margin-top: 4em;
+            }
+            h2 {
                 color: #202020;
                 text-transform: uppercase;
                 word-spacing: 5px;
+                font-family: customFontTwo;
             }
-            h2 span {
-                /* display: block; */
+            .box-1 {
+                margin: 2em;
+                margin-bottom: 6em;
+                padding: 3em;
+                width: 55vw;
+                height: 40vh;
+                align-self: flex-end;
+                margin-left: 5em;
+                box-shadow: -20px 10px 20px 2px #8988882b;
+                border-radius: 5px;
+            }
+            .box-2 {
+                margin: 2em;
+                margin-top: 4em;
+                margin-bottom: 6em;
+                padding: 3em;
+                width: 55vw;
+                height: 40vh;
+                align-self: flex-start;
+                margin-right: 5em;
+                box-shadow: 0px 20px 20px 2px #76757528;
+                border-radius: 5px;
+            }
+            .box-3 {
+                margin: 2em;
+                padding: 3em;
+                width: 55vw;
+                min-height: 50vh;
+                align-self: center;
+                margin-top: 2em;
+                box-shadow: 20px 10px 20px 2px #81818131;
+                /* background-color: #a4a4a45f; */
+                border-radius: 5px;
+                /* h2 span {
+                /* display: block; 
                 margin: 11px 0 17px 0;
-                /* font-size: 80px; */
                 font-size: 2.5rem;
-                /*                 line-height: 80px;
- */
-                color: #f1ebe5;
-                text-shadow: 0 13.36px 8.896px #c4b59d, 0 -2px 1px #fff;
+                color: #eaeaea;
+                text-shadow: 0 8px 20px #5555559b, 0 -2px 1px rgb(190, 190, 190);
                 word-spacing: 5px;
+            } */
+            }
+        }
+    }
+    .contact-section {
+        margin-top: 10em;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        .contact-container {
+            display: inline-flex;
+            flex-direction: column;
+            .form-heading {
+                margin-left: 2em;
+            }
+            .form-container {
+                display: flex;
+                justify-content: center;
+            }
+            .contact-input-container {
+                max-width: 30em;
+                margin: 1em;
+                padding: 1em;
+                li {
+                    display: block;
+                    list-style: none;
+                    margin-top: 1.3em;
+                }
+                input {
+                    padding: 7px;
+                    transition: $form-transition-dur-setting;
+                    outline: none;
+                }
+                input:focus {
+                    transition-duration: $form-transition-dur-setting;
+                    border-bottom: 1px solid $form-bottom-border-color;
+                    color: transparent;
+                }
+                .button {
+                    display: inline-block;
+                    margin-top: 1.5em;
+                    padding: 6px 20px 0px 20px;
+                    border: none;
+                    background-color: #ffffff00;
+                    border-bottom: 2px solid $form-bottom-border-color;
+                    width: 8em;
+                    transition: all 0.4s;
+                    cursor: pointer;
+                }
+                .button span {
+                    cursor: pointer;
+                    display: inline-block;
+                    position: relative;
+                    transition: 0.4s;
+                }
+                .button span:after {
+                    content: 'now';
+                    opacity: 0;
+                    top: 0;
+                    right: -20px;
+                    transition: 0.4s;
+                    position: absolute;
+                }
+                .button:hover span {
+                    padding-right: 2.1em;
+                }
+                .button:hover span:after {
+                    opacity: 4;
+                    right: 0;
+                }
+            }
+            .name-input {
+                width: 49%;
+                @include form-border-correction;
+            }
+            .input-email {
+                @include form-border-correction;
+                width: 100%;
+            }
+            .input-message {
+                @include form-border-correction;
+                height: 10em;
+                min-height: 8em;
+                width: 100%;
+                padding: 7px;
+                transition: $form-transition-dur-setting;
+                outline: none;
+            }
+            .input-message:focus {
+                transition-duration: $form-transition-dur-setting;
+                border-bottom: 1px solid $form-bottom-border-color;
+                color: transparent;
             }
         }
     }
 }
 
-.contact-section {
-    margin-top: 10em;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
     width: 100%;
-    height: 100%;
+}
+
+.container {
+    width: 100%;
+    height: 100vh;
     display: flex;
+    background-image: url("https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80");
+    flex-flow: column;
     justify-content: center;
-    .contact-container {
-        display: inline-flex;
-        flex-direction: column;
-        .form-heading {
-            margin-left: 2em;
-        }
-        .form-container {
-            display: flex;
-            justify-content: center;
-        }
-        .contact-input-container {
-            max-width: 30em;
-            margin: 1em;
-            padding: 1em;
-            li {
-                display: block;
-                list-style: none;
-                margin-top: 1.3em;
-            }
-            input {
-                padding: 7px;
-                transition: $form-transition-dur-setting;
-                outline: none;
-            }
-            input:focus {
-                transition-duration: $form-transition-dur-setting;
-                border-bottom: 1px solid $form-bottom-border-color;
-                color: transparent;
-            }
-            .button {
-                display: inline-block;
-                margin-top: 1.5em;
-                padding: 6px 20px 0px 20px;
-                border: none;
-                background-color: #ffffff00;
-                border-bottom: 2px solid $form-bottom-border-color;
-                width: 8em;
-                transition: all 0.4s;
-                cursor: pointer;
-            }
-            .button span {
-                cursor: pointer;
-                display: inline-block;
-                position: relative;
-                transition: 0.4s;
-            }
-            .button span:after {
-                content: 'now';
-                opacity: 0;
-                top: 0;
-                right: -20px;
-                transition: 0.4s;
-                position: absolute;
-            }
-            .button:hover span {
-                padding-right: 2.1em;
-            }
-            .button:hover span:after {
-                opacity: 4;
-                right: 0;
-            }
-        }
-        .name-input {
-            width: 49%;
-            @include form-border-correction;
-        }
-        .input-email {
-            @include form-border-correction;
-            width: 100%;
-        }
-        .input-message {
-            @include form-border-correction;
-            height: 10em;
-            min-height: 8em;
-            width: 100%;
-            padding: 7px;
-            transition: $form-transition-dur-setting;
-            outline: none;
-        }
-        .input-message:focus {
-            transition-duration: $form-transition-dur-setting;
-            border-bottom: 1px solid $form-bottom-border-color;
-            color: transparent;
-        }
+    align-items: center;
+}
+
+p {
+    font-size: xx-large;
+    color: white;
+}
+
+.typeText::after {
+    content: "|";
+    animation: blink 1s infinite;
+}
+
+@keyframes blink {
+    0%,
+    100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
     }
 }
 
