--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -1,21 +1,21 @@
-/* @media (min-width: 1920px) and (min-height: 1080px) { */
-
-header {
-    height: 8vh;
-    margin-bottom: 2vh;
-    margin-inline: 8em;
-    nav {
-        /* position: fixed;
+@media (min-width: 1600px) and (min-height: 900px) {
+    header {
+        height: 8vh;
+        margin-bottom: 2vh;
+        margin-inline: 8em;
+        nav {
+            /* position: fixed;
             z-index: 999; */
-        .navbar-main {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 1px solid black;
-            .logo {
-                img {
-                    height: 50px;
-                    margin: 10px;
+            .navbar-main {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                border-bottom: 1px solid black;
+                .logo {
+                    img {
+                        height: 50px;
+                        margin: 10px;
+                    }
                 }
                 #respon-img-mini {
                     display: none;
@@ -45,9 +45,6 @@ header {
         }
     }
 }
-
-
-/* } */
 
 @media (max-width: 414px) and (max-height: 736px)
 /* mobile iPhone 8 plus */
