--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -1,186 +1,181 @@
-/* @media (min-width: 1920px) and (min-height:1080px) { */
-
-main {
-    margin-inline: 8em;
-    .first-section {
-        display: flex;
-        flex-direction: column;
-        #helper {
-            display: grid;
-            .first-section-heading-container,
-            .first-section-image-container {
-                grid-column: 1;
-                grid-row: 1;
-            }
-        }
-        .first-section-heading-container {
-            /* text-align: center; */
-            margin-top: 2em;
+@media (min-width: 1600px) and (min-height:900px) {
+    #index {
+        margin-inline: 8em;
+        .first-section {
             display: flex;
-            justify-content: center;
             flex-direction: column;
-            width: 100%;
-            align-items: center;
-            h1 {
-                font-family: customFontTwo;
-                color: white;
-                position: absolute;
-                z-index: 9;
-                display: inline-flex;
-                background-color: transparent;
-                /* text-decoration: underline; */
-                font-weight: bolder;
-                font-size: 5rem;
-                transition-duration: .2s;
-                /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
+            #helper {
+                display: grid;
+                .first-section-heading-container,
+                .first-section-image-container {
+                    grid-column: 1;
+                    grid-row: 1;
+                }
             }
-            /* h1:hover {
+            .first-section-heading-container {
+                /* text-align: center; */
+                margin-top: 2em;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                width: 100%;
+                align-items: center;
+                h1 {
+                    font-family: customFontTwo;
+                    color: white;
+                    position: absolute;
+                    z-index: 9;
+                    display: inline-flex;
+                    background-color: transparent;
+                    /* text-decoration: underline; */
+                    font-weight: bolder;
+                    font-size: 5rem;
+                    transition-duration: .2s;
+                    /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
+                }
+                /* h1:hover {
                         box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
                         transition-duration: .2s;
                     } */
-            /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+                /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
 rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
-        }
-        .first-section-image-container {
-            height: 50%;
-            width: 100%;
-            margin-top: 3em;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            position: relative;
-            img {
-                /* margin: 3em; */
+            }
+            .first-section-image-container {
+                height: 50%;
                 width: 100%;
-                max-width: 85em;
-                height: 30em;
-                transition-duration: .5s;
-                filter: blur(1px) grayscale(1);
-            }
-            img:hover {
-                filter: blur(0) grayscale(0);
-                z-index: 10;
-            }
-            .first-section-image-container:nth-child(1) {
-                padding-bottom: 5em;
-                height: 5em;
-            }
-            .first-section-image-container:nth-child(2) {
-                align-self: flex-end;
-                height: 100%;
+                margin-top: 3em;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                position: relative;
+                img {
+                    /* margin: 3em; */
+                    width: 100%;
+                    max-width: 85em;
+                    height: 30em;
+                    transition-duration: .5s;
+                    filter: blur(1px) grayscale(1);
+                }
+                img:hover {
+                    filter: blur(0) grayscale(0);
+                    z-index: 10;
+                }
+                .first-section-image-container:nth-child(1) {
+                    padding-bottom: 5em;
+                    height: 5em;
+                }
+                .first-section-image-container:nth-child(2) {
+                    align-self: flex-end;
+                    height: 100%;
+                }
             }
         }
-    }
-    .first-section-paragraph-container {
-        /* align-self: flex-end; */
-        margin-top: 5em;
-        h2 {
-            /* text-align: center; */
-            padding: 2em 4em;
-            padding-left: 2em;
-            /* background-color: #f7f7f7; */
-            font-size: 1.6rem;
-            transition-duration: .2s;
-            border-left: 3px solid black;
-        }
-        h2:hover {
-            /* ;               
+        .first-section-paragraph-container {
+            /* align-self: flex-end; */
+            margin-top: 5em;
+            h2 {
+                /* text-align: center; */
+                padding: 2em 4em;
+                padding-left: 2em;
+                /* background-color: #f7f7f7; */
+                font-size: 1.6rem;
+                transition-duration: .2s;
+                border-left: 3px solid black;
+            }
+            h2:hover {
+                /* ;               
                     box-shadow: blue 0px -10px 0px 0px inset, rgb(255, 255, 255) 0px 5px 0px -30px, rgb(31, 193, 27) 0px 10px, rgb(255, 255, 255) 0px 15px 0px -30px, rgb(255, 217, 19) 0px 20px, rgb(255, 255, 255) 0px 25px 0px -30px, rgb(255, 156, 85) 0px 30px, rgb(255, 255, 255) 0px 35px 0px -30px, rgb(255, 85, 85) 0px 40px;
      */
-            transition-duration: .2s;
+                transition-duration: .2s;
+            }
         }
-    }
-    .second-section {
-        /* height: max(100vh, 120vh); */
-        height: 100vh;
-        .second-section-content-organizer {
-            height: 80%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            .second-section-first-image-desc-container {
+        .second-section {
+            /* height: max(100vh, 120vh); */
+            height: 100vh;
+            .second-section-content-organizer {
+                height: 80%;
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 justify-content: center;
-                padding-right: 14em;
-                padding-bottom: 1em;
-                .second-section-first-desc-container {
+                .second-section-first-image-desc-container {
                     display: flex;
+                    flex-direction: row;
                     justify-content: center;
-                    flex-direction: column;
-                    height: 100%;
-                    padding-left: 2em;
-                    p {
+                    padding-right: 14em;
+                    padding-bottom: 1em;
+                    .second-section-first-desc-container {
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        height: 100%;
+                        padding-left: 2em;
+                        p {
+                            width: 100%;
+                            max-width: 25em;
+                            height: 100%;
+                            /* padding: max(3vw, 1em); */
+                            /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                        }
+                        h4 {
+                            /* padding-left: 2em; */
+                            padding-bottom: .3em;
+                            font-weight: bold;
+                            justify-self: flex-start;
+                        }
+                    }
+                    img {
                         width: 100%;
                         max-width: 25em;
-                        height: 100%;
-                        /* padding: max(3vw, 1em); */
-                        /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
-                    }
-                    h4 {
-                        /* padding-left: 2em; */
-                        padding-bottom: .3em;
-                        font-weight: bold;
-                        justify-self: flex-start;
+                        height: auto;
                     }
                 }
-                img {
-                    width: 100%;
-                    max-width: 25em;
-                    height: auto;
-                }
-            }
-            .second-section-second-image-desc-container {
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                padding-top: 1em;
-                padding-left: 13em;
-                .second-section-second-desc-container {
+                .second-section-second-image-desc-container {
                     display: flex;
+                    flex-direction: row;
                     justify-content: center;
-                    flex-direction: column;
-                    height: 100%;
-                    padding-right: 4em;
-                    p {
-                        width: 40vw;
-                        max-width: 25em;
+                    padding-top: 1em;
+                    padding-left: 13em;
+                    .second-section-second-desc-container {
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
                         height: 100%;
-                        /* padding: 3em;*/
-                        /* padding-bottom: -10em; */
-                        /* padding: max(3vw, 1em); */
-                        /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                        padding-right: 4em;
+                        p {
+                            width: 40vw;
+                            max-width: 25em;
+                            height: 100%;
+                            /* padding: 3em;*/
+                            /* padding-bottom: -10em; */
+                            /* padding: max(3vw, 1em); */
+                            /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                        }
+                        h4 {
+                            padding-bottom: .3em;
+                            font-weight: bold;
+                        }
                     }
-                    h4 {
-                        padding-bottom: .3em;
-                        font-weight: bold;
+                    img {
+                        width: 100%;
+                        max-width: 25em;
+                        height: auto;
                     }
                 }
-                img {
-                    width: 100%;
-                    max-width: 25em;
-                    height: auto;
+            }
+            .second-section-paragraph-container {
+                min-height: 20%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-inline: 4em;
+                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
+                h3 {
+                    margin: 4em;
+                    margin-inline: 6em;
+                    text-align: center;
+                    font-size: 1.2rem;
                 }
             }
-        }
-        .second-section-paragraph-container {
-            min-height: 20%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-inline: 4em;
-            h3 {
-                margin: 4em;
-                margin-inline: 6em;
-                text-align: center;
-                font-size: 1.2rem;
-            }
-        }
-        .second-section-paragraph-container/* :hover */
-        {
-            filter: opacity(100%);
-            transition-duration: .2s;
-            box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
         }
     }
     .third-section {
@@ -240,14 +235,11 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     }
 }
 
-
-/* } */
-
 @media (max-width: 414px) and (max-height: 736px)
 /* mobile iPhone 8 plus */
 
 {
-    main {
+    #index {
         margin-inline: 1em;
     }
     .first-section {
