--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -97,10 +97,6 @@ select {
     margin-bottom: 2vh;
     margin-inline: 8em;
   }
-  header nav {
-    /* position: fixed;
-            z-index: 999; */
-  }
   header nav .navbar-main {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -108,38 +104,49 @@ select {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    border-bottom: 1px solid black;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    border-bottom: .5px solid black;
   }
   header nav .navbar-main .logo img {
     height: 50px;
     margin: 10px;
   }
-  header nav .navbar-main #respon-img-mini {
+  header nav .navbar-main .logo #respon-img-mini {
     display: none;
   }
-  header nav .button {
-    /*  display: flex;
-                justify-content: end; */
-    /* body {
-                 min-height: 100vh;
-                background: linear-gradient(#7d6cfc, #c635ea);} */
-    /* background-color: red; */
-  }
-  header nav .button .button-container li {
+  header nav .navbar-main .button .button-container li {
+    position: relative;
     float: left;
     list-style: none;
-    line-height: 20px;
-    width: 150px;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
     text-align: center;
-  }
-  header nav .button .button-container li a {
-    text-decoration: none;
-    display: block;
+    background-color: transparent;
+    /* border: none; */
     font-size: 120%;
+    margin-left: .7em;
+  }
+  header nav .navbar-main .button .button-container a {
+    text-decoration: none;
     color: black;
+  }
+  header nav .navbar-main .button .button-container a:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    height: 1px;
+    left: 50%;
+    position: absolute;
+    background: black;
+    -webkit-transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+  header nav .navbar-main .button .button-container a:hover:after {
+    width: 100%;
+    left: 0;
   }
 }
 
