--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -59,7 +59,7 @@
             h2 {
                 text-align: center;
                 width: 100%;
-                font-family: customFontThree;
+                font-family: customFontFour;
                 font-weight: bold;
             }
             p {
