--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -21,7 +21,7 @@
                 width: 100%;
                 align-items: center;
                 h1 {
-                    font-family: customFontTwo;
+                    font-family: customFontFour;
                     color: white;
                     position: absolute;
                     z-index: 9;
@@ -29,17 +29,10 @@
                     background-color: transparent;
                     /* text-decoration: underline; */
                     font-weight: bolder;
-                    font-size: 5rem;
+                    font-size: 6rem;
                     transition-duration: .2s;
                     user-select: none;
-                    /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
                 }
-                /* h1:hover {
-                        box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
-                        transition-duration: .2s;
-                    } */
-                /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             }
             .first-section-image-container {
                 height: 50%;
@@ -50,7 +43,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
                 justify-content: center;
                 position: relative;
                 img {
-                    /* margin: 3em; */
                     width: 100%;
                     max-width: 85em;
                     height: 30em;
@@ -72,21 +64,15 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             }
         }
         .first-section-paragraph-container {
-            /* align-self: flex-end; */
             margin-top: 5.5em;
             h2 {
-                /* text-align: center; */
                 padding: 2em 4em;
                 padding-left: 1em;
-                /* background-color: #f7f7f7; */
                 font-size: 1.6rem;
                 transition-duration: .2s;
                 border-left: 3px solid black;
             }
             h2:hover {
-                /* ;               
-                    box-shadow: blue 0px -10px 0px 0px inset, rgb(255, 255, 255) 0px 5px 0px -30px, rgb(31, 193, 27) 0px 10px, rgb(255, 255, 255) 0px 15px 0px -30px, rgb(255, 217, 19) 0px 20px, rgb(255, 255, 255) 0px 25px 0px -30px, rgb(255, 156, 85) 0px 30px, rgb(255, 255, 255) 0px 35px 0px -30px, rgb(255, 85, 85) 0px 40px;
-     */
                 transition-duration: .2s;
             }
         }
@@ -118,7 +104,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
                             /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
                         }
                         h4 {
-                            /* padding-left: 2em; */
                             padding-bottom: .3em;
                             font-weight: bold;
                             justify-self: flex-start;
@@ -246,9 +231,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     .first-section {
         display: flex;
         flex-direction: column;
-        /* #helper {
-            
-        } */
         .first-section-heading-container {
             margin-top: 2em;
             display: flex;
@@ -259,8 +241,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             h1 {
                 font-family: customFontTwo;
                 color: black;
-                /* position: absolute;
-                z-index: 9; */
                 display: inline-flex;
                 background-color: transparent;
                 font-weight: bolder;
@@ -277,7 +257,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             justify-content: center;
             position: relative;
             img {
-                /* margin: 3em; */
                 width: fit-content;
                 transition-duration: .5s;
             }
@@ -299,7 +278,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             font-size: 1rem;
             transition-duration: .2s;
             border-left: 3px solid black;
-            /* font-size: clamp(1.6rem, 1.3rem, .7rem); */
         }
         h2:hover {
             transition-duration: .2s;
@@ -317,7 +295,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
                 flex-direction: column;
                 justify-content: center;
                 margin-top: 5em;
-                /* margin-inline: 1em; */
                 .second-section-first-desc-container {
                     padding-top: 1em;
                     padding-inline: 1em;
@@ -342,7 +319,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
                 flex-direction: column-reverse;
                 justify-content: center;
                 margin-top: 5em;
-                /* margin-inline: 1em; */
                 .second-section-second-desc-container {
                     padding-top: 1em;
                     padding-inline: 1em;
