--- a/individual-work/wba-projekt-2/styles/_var.scss
+++ b/individual-work/wba-projekt-2/styles/_var.scss
@@ -13,7 +13,12 @@
     font-family: customFontThree;
 }
 
+@font-face {
+    src: url(../fonts/Peg.ttf);
+    font-family: customFontFour;
+}
+
 $font-amatic: customFontTwo;
-$footer-color: #857f7f85;
+$footer-color: #857f7fa6;
 $form-bottom-border-color: black;
 $form-transition-dur-setting: all 0.30s ease-in-out;
