--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -91,6 +91,11 @@ select {
   font-family: customFontThree;
 }
 
+@font-face {
+  src: url(../fonts/Peg.ttf);
+  font-family: customFontFour;
+}
+
 @media (min-width: 1600px) and (min-height: 900px) {
   header {
     height: 8vh;
@@ -296,7 +301,7 @@ select {
     margin-inline: 20vw;
     margin-top: 10em;
     padding: 1em;
-    border-top: 2px solid #857f7f85;
+    border-top: 2px solid #857f7fa6;
   }
   .footer-main .footer-text-container {
     display: -webkit-box;
@@ -309,12 +314,12 @@ select {
     text-align: center;
   }
   .footer-main .footer-text-container:nth-child(1) p {
-    color: #857f7f85;
+    color: #857f7fa6;
     margin-top: .3em;
     font-size: clamp(0.8vw, 1em);
   }
   .footer-main .footer-text-container:nth-child(1) p span {
-    color: #857f7f85;
+    color: #857f7fa6;
     text-decoration: underline;
     font-size: clamp(0.8vw, 1em);
   }
@@ -325,7 +330,7 @@ select {
     margin-inline: 12vw;
     margin-top: 5em;
     padding: .5em;
-    border-top: 2px solid #857f7f85;
+    border-top: 2px solid #857f7fa6;
   }
   .footer-main .footer-text-container {
     display: -webkit-box;
@@ -338,12 +343,12 @@ select {
     text-align: center;
   }
   .footer-main .footer-text-container:nth-child(1) p {
-    color: #857f7f85;
+    color: #857f7fa6;
     margin-top: .1em;
     font-size: clamp(0.8vw, 1em);
   }
   .footer-main .footer-text-container:nth-child(1) p span {
-    color: #857f7f85;
+    color: #857f7fa6;
     text-decoration: underline;
     font-size: clamp(0.8vw, 1em);
   }
@@ -390,15 +395,9 @@ select {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    /* h1:hover {
-                        box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
-                        transition-duration: .2s;
-                    } */
-    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   }
   #index .first-section .first-section-heading-container h1 {
-    font-family: customFontTwo;
+    font-family: customFontFour;
     color: white;
     position: absolute;
     z-index: 9;
@@ -408,14 +407,13 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     background-color: transparent;
     /* text-decoration: underline; */
     font-weight: bolder;
-    font-size: 5rem;
+    font-size: 6rem;
     -webkit-transition-duration: .2s;
             transition-duration: .2s;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
-    /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
   }
   #index .first-section .first-section-image-container {
     height: 50%;
@@ -434,7 +432,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     position: relative;
   }
   #index .first-section .first-section-image-container img {
-    /* margin: 3em; */
     width: 100%;
     max-width: 85em;
     height: 30em;
@@ -458,23 +455,17 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     height: 100%;
   }
   #index .first-section-paragraph-container {
-    /* align-self: flex-end; */
     margin-top: 5.5em;
   }
   #index .first-section-paragraph-container h2 {
-    /* text-align: center; */
     padding: 2em 4em;
     padding-left: 1em;
-    /* background-color: #f7f7f7; */
     font-size: 1.6rem;
     -webkit-transition-duration: .2s;
             transition-duration: .2s;
     border-left: 3px solid black;
   }
   #index .first-section-paragraph-container h2:hover {
-    /* ;               
-                    box-shadow: blue 0px -10px 0px 0px inset, rgb(255, 255, 255) 0px 5px 0px -30px, rgb(31, 193, 27) 0px 10px, rgb(255, 255, 255) 0px 15px 0px -30px, rgb(255, 217, 19) 0px 20px, rgb(255, 255, 255) 0px 25px 0px -30px, rgb(255, 156, 85) 0px 30px, rgb(255, 255, 255) 0px 35px 0px -30px, rgb(255, 85, 85) 0px 40px;
-     */
     -webkit-transition-duration: .2s;
             transition-duration: .2s;
   }
@@ -531,7 +522,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
   }
   #index .second-section .second-section-content-organizer .second-section-first-image-desc-container .second-section-first-desc-container h4 {
-    /* padding-left: 2em; */
     padding-bottom: .3em;
     font-weight: bold;
     justify-self: flex-start;
@@ -690,9 +680,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    /* #helper {
-            
-        } */
   }
   .first-section .first-section-heading-container {
     margin-top: 2em;
@@ -714,8 +701,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   .first-section .first-section-heading-container h1 {
     font-family: customFontTwo;
     color: black;
-    /* position: absolute;
-                z-index: 9; */
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
@@ -742,7 +727,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     position: relative;
   }
   .first-section .first-section-image-container img {
-    /* margin: 3em; */
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
@@ -768,7 +752,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     -webkit-transition-duration: .2s;
             transition-duration: .2s;
     border-left: 3px solid black;
-    /* font-size: clamp(1.6rem, 1.3rem, .7rem); */
   }
   .first-section-paragraph-container h2:hover {
     -webkit-transition-duration: .2s;
@@ -802,7 +785,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
         -ms-flex-pack: center;
             justify-content: center;
     margin-top: 5em;
-    /* margin-inline: 1em; */
   }
   .second-section .second-section-content-organizer .second-section-first-image-desc-container .second-section-first-desc-container {
     padding-top: 1em;
@@ -836,7 +818,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
         -ms-flex-pack: center;
             justify-content: center;
     margin-top: 5em;
-    /* margin-inline: 1em; */
   }
   .second-section .second-section-content-organizer .second-section-second-image-desc-container .second-section-second-desc-container {
     padding-top: 1em;
@@ -1019,7 +1000,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   .about-section .text-container h2 {
     text-align: center;
     width: 100%;
-    font-family: customFontThree;
+    font-family: customFontFour;
     font-weight: bold;
   }
   .about-section .text-container p {
@@ -1436,7 +1417,6 @@ body {
   scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  /* font-family: 'Quicksand', sans-serif; */
 }
 
 html::-webkit-scrollbar,
@@ -1445,10 +1425,6 @@ body::-webkit-scrollbar {
 }
 
 body {
-  /* background-image: url("leaf.jpg");*/
-  /*  background: #171717; */
-  /*   background-image: linear-gradient(90deg, #1413135a 1px, transparent 0), linear-gradient(#1413135a 1px, transparent 0);
-    background-size: 210px 210px; */
   font-family: customFontOne;
 }
 
