--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -76,7 +76,7 @@
                 margin-bottom: 6em;
                 padding: 3em;
                 width: 55vw;
-                height: 40vh;
+                min-height: 40vh;
                 align-self: flex-end;
                 margin-left: 5em;
                 box-shadow: -20px 10px 20px 2px #8988882b;
@@ -88,7 +88,7 @@
                 margin-bottom: 6em;
                 padding: 3em;
                 width: 55vw;
-                height: 40vh;
+                min-height: 40vh;
                 align-self: flex-start;
                 margin-right: 5em;
                 box-shadow: 0px 20px 20px 2px #76757528;
