--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -610,10 +610,10 @@ select {
         grid-template-columns: repeat(2, 1fr);
     -ms-grid-rows: (1fr)[2];
         grid-template-rows: repeat(2, 1fr);
-  }
-  .third-section .third-section-image-container img {
-    /* max-width: 25em;
-                        height: auto; */
+    /* .third-section-image-container:nth-child(1) {}
+            .third-section-image-container:nth-child(2) {}
+            .third-section-image-container:nth-child(3) {}
+            .third-section-image-container:nth-child(4) {} */
   }
   .third-section .third-section-image-container div {
     display: -webkit-box;
